# ShowClient

./: BUILDING.txt  CMakeLists.txt  ShowClient.sln  ShowClient.vcxproj  ShowClient.vcxproj.filters
ShowClient/: Client.cpp  Client.hpp  ClientConfiguration.cpp  ClientConfiguration.hpp  Configuration.cpp  Configuration.hpp  IOController.cpp  IOController.hpp  LightController.cpp  LightController.hpp  MixerControl.cpp  MixerControl.hpp  MusicController.cpp  MusicController.hpp  PRUConfig.cpp  PRUConfig.hpp  StatusController.cpp  StatusController.hpp  main.cpp
ShowClient.xcodeproj/: project.pbxproj
ShowClient.xcodeproj/project.xcworkspace/xcuserdata/charles.xcuserdatad/: UserInterfaceState.xcuserstate
ShowClient.xcodeproj/xcshareddata/xcschemes/: ShowClient.xcscheme
ShowClient.xcodeproj/xcuserdata/charles.xcuserdatad/xcschemes/: xcschememanagement.plist
ShowClient/bone/: BeagleLed.cpp  BeagleLed.hpp  BeaglePru.cpp  BeaglePru.hpp  BlinkPru.cpp  BlinkPru.hpp  PruConstants.hpp  PruModes.hpp
ShowClient/lightfile/: lightfile.cpp  lightfile.hpp  lightheader.cpp  lightheader.hpp
ShowClient/wavfile/: chunkheader.cpp  chunkheader.hpp  fileheader.cpp  fileheader.hpp  mwavfile.cpp  mwavfile.hpp  wavfmtchunk.cpp  wavfmtchunk.hpp
beagle/device-overlay/: AM335X-PRU-RPROC-PRUCAPE-00A0.dts.example  WorkingDTS.dts  blinkylight.dts
beagle/microcode/: .gitignore  main.c  makefile  microcode.asm
beagle/setup/: 01-Base Beagle Bone imaging.txt  02-Updating_software_SD_card.txt  03-Build-Blinky.txt  04-Service-Setup.txt  05-Making-SD-Flash.txt  XX-Flash-Beagle-Mount.txt  XX-HowToCreateAnImage.txt
beagle/startup-service/: checkip.sh  findip.sh  media.mount  showclient.service  showclient.sh
common/network/: Connection.cpp  Connection.hpp  Timer.cpp  Timer.hpp
common/network/packets/: SyncPacket.cpp  SyncPacket.hpp
common/packets/: BufferPacket.cpp  BufferPacket.hpp  ErrorPacket.cpp  ErrorPacket.hpp
common/utility/: BaseConfiguration.cpp  buffer.hpp  mapfile.cpp  timeutil.cpp  timeutil.hpp
examples/: client.cfg
